fix schedule alignment mobile tablet

--- a/src/components/schedule/schedule.scss
+++ b/src/components/schedule/schedule.scss
@@ -95,7 +95,6 @@
       flex-direction: column;
     }
     .thirdColumn {
-      width: 100%;
       &::after {
         content: '';
         position: relative;
